--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
     "db-migrate-sqlite3": "^0.5.0",
     "express": "^4.18.2",
     "sequelize": "^6.34.0",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1",
-    "sequelize-cli": "^6.6.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
