--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.48.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-sqlite-hook": "^3.2.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
