--- a/package.json
+++ b/package.json
@@ -1,62 +1,94 @@
 {
   "name": "invest_flow",
   "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "start": "npm run copysqlwasm && ionic serve",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test.e2e": "cypress run",
-    "test.unit": "vitest",
-    "lint": "eslint",
-    "copysqlwasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm public/assets"
-  },
+  "homepage": "./",
   "dependencies": {
-    "@capacitor-community/electron": "^5.0.1",
-    "@capacitor-community/sqlite": "^5.4.2-2",
-    "@capacitor/android": "^5.5.1",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.1",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "^5.5.1",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
-    "@hookform/resolvers": "^3.3.2",
-    "@ionic/react": "^7.0.0",
-    "@ionic/react-router": "^7.0.0",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
-    "ionicons": "^7.0.0",
+    "@capacitor-community/electron": "^4.1.2",
+    "@capacitor-community/sqlite": "^5.0.0",
+    "@capacitor/android": "5.0.4",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/dialog": "^5.0.0",
+    "@capacitor/ios": "^5.0.4",
+    "@capacitor/toast": "^5.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/react": "^6.6.1",
+    "@ionic/react-router": "^6.6.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.19.15",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "ionicons": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4",
-    "react-sqlite-hook": "^3.2.1",
+    "react-modal": "^3.15.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-sqlite-hook": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.16",
+    "typescript": "^4.4.4",
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4",
     "yup": "^1.3.2"
   },
-  "devDependencies": {
-    "@capacitor/cli": "5.5.1",
-    "@ionic/cli": "^7.1.5",
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-react": "^4.2.0",
-    "copyfiles": "^2.4.1",
-    "cypress": "^12.7.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-react": "^7.32.2",
-    "jsdom": "^22.1.0",
-    "terser": "^5.4.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+  "scripts": {
+    "start": "npm run copysqlwasm && craco start",
+    "build": "npm run copysqlwasm && craco build",
+    "test": "craco test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
+    "copysqlwasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm public/assets",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start",
+    "build_android": "ionic build && npx cap copy --inline android",
+    "build_ios": "ionic build && npx cap copy --inline ios"
   },
-  "description": "An Ionic project"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^5.0.0",
+    "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
+    "@types/react-modal": "^3.13.1",
+    "copyfiles": "^2.4.1",
+    "craco-swc": "^0.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cosentino/capacitor-sqlite-react-typeorm-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cosentino/capacitor-sqlite-react-typeorm-app.git/issues"
+  }
 }
