updated package and fix route

--- a/package.json
+++ b/package.json
@@ -3,36 +3,36 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@capacitor-community/electron": "^4.1.2",
-    "@capacitor-community/sqlite": "^5.0.0",
-    "@capacitor/android": "5.0.4",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/dialog": "^5.0.0",
-    "@capacitor/ios": "^5.0.4",
-    "@capacitor/toast": "^5.0.0",
-    "@ionic/pwa-elements": "^3.1.1",
-    "@ionic/react": "^6.6.1",
-    "@ionic/react-router": "^6.6.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
-    "ionicons": "^6.0.3",
+    "@capacitor-community/electron": "^5.0.1",
+    "@capacitor-community/sqlite": "^5.4.1",
+    "@capacitor/android": "^5.5.1",
+    "@capacitor/core": "^5.5.1",
+    "@capacitor/dialog": "^5.0.6",
+    "@capacitor/ios": "^5.5.1",
+    "@capacitor/toast": "^5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
+    "@ionic/react": "^7.5.6",
+    "@ionic/react-router": "^7.5.6",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "ionicons": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-modal": "^3.15.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-sqlite-hook": "^3.2.0",
+    "react-modal": "^3.16.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-sqlite-hook": "^3.2.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.16",
+    "typeorm": "^0.3.17",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -80,7 +80,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^5.5.1",
     "@craco/craco": "^7.1.0",
     "@craco/types": "^7.1.0",
     "copyfiles": "^2.4.1",
